--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,13 @@ label {
 }
 
 
-
-
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+/* For Firefox */
+input[type='number'] {
+    -moz-appearance:textfield;
+}
 
